tests/baselines/reference/varRequireFromTypescript.errors.txt
tests/cases/conformance/salsa/use.js(1,10): error TS2304: Cannot find name 'require'.


==== tests/cases/conformance/salsa/use.js (1 errors) ====
    var ex = require('./ex')
             ~~~~~~~
!!! error TS2304: Cannot find name 'require'.
    
    // values work
    var crunch = new ex.Crunch(1);
    crunch.n
    
    
    // types work
    /**
     * @param {ex.Greatest} greatest
     * @param {ex.Crunch} wrap
     */
    function f(greatest, wrap) {
        greatest.day
        wrap.n
    }
    
==== tests/cases/conformance/salsa/ex.d.ts (0 errors) ====
    export type Greatest = { day: 1 }
    export class Crunch {
        n: number
        m(): number
        constructor(n: number)
    }
    